partially enum singletons