@@ -19,7 +19,7 @@ public final class Harvester extends SimpleItemHandler implements ScriptFile {
 
     @Override
     public List<Integer> getItemIds() {
-        return Collections.singletonList(ITEM_IDS);
+        return List.of(ITEM_IDS);
     }
 
 
