@@ -18,7 +18,7 @@ public final class HolyWater extends SimpleItemHandler implements ScriptFile {
 
     @Override
     public List<Integer> getItemIds() {
-        return Collections.singletonList(ITEM_IDS);
+        return List.of(ITEM_IDS);
     }
 
 
